# agentic-playbooks

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE-CHECKLIST.md  SECURITY.md  deny.toml  dist-workspace.toml  llms.txt  skills-lock.json
.apb/: .gitignore  (+1 more)
crates/apb-cli/: Cargo.toml
crates/apb-cli/assets/: feedback-loop.md
crates/apb-cli/src/: cache.rs  connector.rs  main.rs  manage.rs  onboarding.rs  profile.rs  run.rs  selfupdate.rs  serve.rs  util.rs
crates/apb-cli/tests/: advisory_cli_test.rs  cli_test.rs  init_interactive_test.rs  main.rs  mcp_cli_test.rs  mcp_supervise_test.rs  phase9_cli_test.rs  run_cli_test.rs  stdio_profile_e2e_test.rs  supervise_cli_test.rs
crates/apb-cli/tests/suite/: answer_cli_test.rs  ask_server_cli_test.rs  cache_cli.rs  cli_test.rs  connector_cli.rs  demo_playbooks_test.rs  detached_driver_test.rs  live_smoke_test.rs  official_connectors_gate.rs  phase9_cli_test.rs  profile_cli_test.rs  projects_cli_test.rs  run_cli_test.rs  run_doctor_cli_test.rs  stdio_profile_e2e_test.rs  supervise_cli_test.rs
crates/apb-core/: Cargo.toml
crates/apb-core/src/: bundle.rs  cache.rs  config.rs  content.rs  detect.rs  dismiss.rs  doctor.rs  duration.rs  effects.rs  fingerprint.rs  fsutil.rs  lib.rs  migration.rs  models_table.rs  overrides.rs  profile.rs  profile_store.rs  projects.rs  registry.rs  schema.rs  schema_migrate.rs  scope.rs  skills.rs  store.rs  trust.rs  validate.rs  versioning.rs  workspace.rs
crates/apb-core/src/connector/: common.rs  config.rs  contract.rs  def.rs  install.rs  mod.rs  official.rs  resolve.rs  secrets.rs  store.rs  template.rs
crates/apb-core/tests/: bundle_test.rs  config_test.rs  content_snapshot_test.rs  detect_test.rs  doctor_test.rs  fsutil_test.rs  main.rs  migration_test.rs  models_table_test.rs  profile_resolve_test.rs  promotion_test.rs  provenance_test.rs  registry_test.rs  schema_migrate_config_test.rs  schema_migrate_test.rs  schema_test.rs  validate_duration_test.rs  validate_profiles_test.rs  validate_semantics_test.rs  validate_structure_test.rs  versioning_test.rs  versions_provenance_test.rs
crates/apb-core/tests/fixtures/: interactive_howto_example.yaml  valid.yaml
crates/apb-core/tests/suite/: bundle_test.rs  common.rs  config_test.rs  detect_test.rs  doctor_test.rs  instruction_draft_test.rs  interactive_howto_example_test.rs  migration_test.rs  models_table_test.rs  overrides_test.rs  profile_resolve_test.rs  promotion_test.rs  provenance_test.rs  registry_test.rs  schema_migrate_config_test.rs  schema_test.rs  validate_profiles_test.rs  validate_semantics_test.rs  validate_structure_test.rs  versioning_test.rs
crates/apb-engine/: Cargo.toml
crates/apb-engine/src/: adapter.rs  agent_home.rs  connector_call.rs  connector_imap.rs  connector_prompt.rs  connector_result.rs  connector_run.rs  connector_smtp.rs  connector_test.rs  context.rs  control.rs  driver.rs  error.rs  event.rs  hooks.rs  inspect.rs  invocation.rs  legacy_snapshot.rs  lib.rs  liveness.rs  manifest.rs  parallel.rs  proc.rs  progress.rs  question.rs  review.rs  run_config.rs  run_doctor.rs  run_lineage.rs  scheduler.rs  script.rs  signals.rs  stall.rs  state.rs  stop.rs  workdir.rs
crates/apb-engine/src/scheduler/: cache.rs  node.rs  patch.rs  prepare.rs  rebind.rs  resume.rs  supervisor.rs
crates/apb-engine/tests/: acp_adapter_test.rs  acp_config_test.rs  adapter_test.rs  agent_report_test.rs  agent_timeout_test.rs  background_supervisor_test.rs  child_run_event_test.rs  context_compaction_test.rs  context_test.rs  control_test.rs  digest_binding_test.rs  finish_answer_test.rs  global_config_test.rs  global_scope_run_test.rs  heartbeat_lost_test.rs  inspect_wait_test.rs  instruction_precedence_test.rs  main.rs  migrate_test.rs  overrides_run_test.rs  parallel_cancel_test.rs  parallel_concurrency_test.rs  parallel_e2e_test.rs  process_group_test.rs  profile_run_test.rs  resume_test.rs  retry_test.rs  review_state_test.rs  review_test.rs  runner_registry_test.rs  subplaybook_run_test.rs  success_check_test.rs  supervised_drive_test.rs  supervisor_commands_test.rs  wait_test.rs  wake_events_test.rs  workdir_test.rs
crates/apb-engine/tests/common/: mod.rs
crates/apb-engine/tests/fixtures/: claude_session.jsonl  codex_plain.txt
crates/apb-engine/tests/suite/: acp_adapter_test.rs  acp_config_test.rs  adapter_bounded_waits_test.rs  adapter_output_test.rs  adapter_test.rs  agent_report_test.rs  agent_timeout_test.rs  background_run_test.rs  background_supervisor_test.rs  cache_test.rs  child_connector_prepare.rs  connector_asana.rs  connector_call.rs  connector_discord.rs  connector_e2e.rs  connector_gitlab.rs  connector_healthcheck.rs  connector_imap.rs  connector_manifest.rs  connector_play_call.rs  connector_run.rs  connector_slack.rs  connector_smtp.rs  connector_youtrack.rs  connector_zulip.rs  context_compaction_test.rs  context_test.rs  control_liveness_test.rs  detached_driver_test.rs  event_test.rs  failure_reason_test.rs  finish_answer_test.rs  finish_context_test.rs  global_config_test.rs  global_scope_run_test.rs  instruction_precedence_test.rs  interaction_defaults_test.rs  interactive_live_test.rs  interactive_reprompt_test.rs  interactive_timeout_test.rs  (+32 more)
crates/apb-mcp/: Cargo.toml
crates/apb-mcp/src/: advisory_tools.rs  ask_server.rs  catalog.rs  instructions.rs  lib.rs  plan.rs  policy.rs  profile_tools.rs  tools.rs
crates/apb-mcp/src/server/: args.rs  mod.rs  playbook.rs  profile.rs  run.rs  supervisor.rs  tests.rs
crates/apb-mcp/tests/: advisory_tools_test.rs  capture_tools_test.rs  catalog_tools_test.rs  main.rs  patch_tool_test.rs  policy_test.rs  profile_e2e_test.rs  profile_tools_test.rs  read_tools_test.rs  review_tool_test.rs  run_tools_test.rs  subplaybook_policy_test.rs  supervisor_tools_test.rs  trial_tools_test.rs  write_tools_test.rs
crates/apb-server/: Cargo.toml
crates/apb-server/src/: lib.rs  lock.rs  watch.rs
crates/apb-server/tests/: api_test.rs  main.rs  meta_api_test.rs  profiles_api_test.rs  runs_api_test.rs  ws_test.rs
(+284 files in other folders)
