[workspace]
resolver = "2"
members = ["crates/apb-core", "crates/apb-server", "crates/apb-cli", "crates/apb-engine", "crates/apb-mcp"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/itechmeat/agentic-playbooks"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
thiserror = "2.0"
tokio = { version = "1.52", features = ["full"] }
sha2 = "0.11"
hmac = "0.13"
uuid = { version = "1", features = ["v4"] }
