[workspace]
resolver = "2"
members = ["crates/apb-core", "crates/apb-server", "crates/apb-cli", "crates/apb-engine", "crates/apb-mcp"]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/itechmeat/agentic-playbooks"

# Light debug info for iterative builds: backtraces keep file and line, but
# the linker stops packaging full debug info into every test binary (the most
# expensive phase of the per-task cycle). See docs/BUILD-OPTIMIZATION.md.
[profile.dev]
debug = "line-tables-only"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
thiserror = "2.0"
tokio = { version = "1.52", features = ["full"] }
sha2 = "0.11"
hmac = "0.13"
uuid = { version = "1", features = ["v4"] }
percent-encoding = "2"
ureq = { version = "2", features = ["json"] }
jsonschema = { version = "0.26", default-features = false }
shell-words = "1"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls", "hostname"] }
globset = "0.4"
