[workspace]
resolver = "2"
members = ["crates/apb-core", "crates/apb-server", "crates/apb-cli", "crates/apb-engine", "crates/apb-mcp"]

[workspace.package]
version = "0.10.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/itechmeat/agentic-playbooks"

# Light debug info for iterative builds: backtraces keep file and line, but
# the linker stops packaging full debug info into every test binary (the most
# expensive phase of the per-task cycle). See docs/BUILD-OPTIMIZATION.md.
[profile.dev]
debug = "line-tables-only"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
thiserror = "2.0"
tokio = { version = "1.52", features = ["full"] }
sha2 = "0.11"
hmac = "0.13"
uuid = { version = "1", features = ["v4"] }
percent-encoding = "2"
ureq = { version = "3", features = ["json"] }
jsonschema = { version = "0.48", default-features = false }
shell-words = "1"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls", "hostname"] }
globset = "0.4"
# Native IMAP execution for the `imap` connector function kind (spec 3.2, wave
# 2): blocking client over a plaintext or rustls stream, silent-read discipline
# (BODY.PEEK, EXAMINE) enforced by the engine.
imap = { version = "2.4", default-features = false }
# The envelope/address types `imap::types::Fetch::envelope` returns are defined
# in imap-proto and are not re-exported by the imap crate, so naming them in
# the search-result decoder needs this direct dependency (version matched to
# imap 2.4's transitive pin).
imap-proto = "0.16"
mail-parser = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-platform-verifier = "0.7"
