[package]
name = "apb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "apb"
path = "src/main.rs"

[dependencies]
apb-core = { path = "../apb-core" }
apb-server = { path = "../apb-server" }
tokio.workspace = true
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"
open = "5.3.6"
serde_json.workspace = true
apb-engine = { version = "0.3.0", path = "../apb-engine" }
apb-mcp = { version = "0.3.0", path = "../apb-mcp" }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
serde_yaml_ng.workspace = true
jsonschema.workspace = true
