[package]
name = "apb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local runner for agentic playbooks with an embedded web dashboard and MCP server"
homepage = "https://github.com/itechmeat/agentic-playbooks"

[[bin]]
name = "apb"
path = "src/main.rs"

[package.metadata.dist]
dist = true

[dependencies]
apb-core = { path = "../apb-core" }
apb-server = { path = "../apb-server" }
tokio.workspace = true
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"
open = "5.3.6"
serde_json.workspace = true
apb-engine = { version = "0.10.0", path = "../apb-engine" }
apb-mcp = { version = "0.10.0", path = "../apb-mcp" }
cliclack = "0.5.5"
axoupdater = { version = "0.10.0", default-features = false, features = ["github_releases", "blocking"] }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
serde_yaml_ng.workspace = true
jsonschema.workspace = true
# Process-group signalling and liveness checks in the detached-driver suite,
# as syscalls rather than `kill` subprocesses: `kill -9 -<pgid>` is accepted by
# BSD kill (macOS) and rejected by procps-ng kill (Linux), which silently
# turned the group kill into a no-op and hung the suite on CI.
[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
