[package]
name = "apb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true
sha2.workspace = true
uuid.workspace = true
percent-encoding.workspace = true
jsonschema.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
