[package]
name = "apb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true
sha2.workspace = true
uuid.workspace = true
percent-encoding.workspace = true
jsonschema.workspace = true
shell-words.workspace = true
rust-embed = "8.12"
globset.workspace = true

# Group termination of the agent-detection probe tree (Unix): kill(-pgid,
# SIGKILL) as a syscall rather than a `kill -KILL -<pgid>` subprocess, whose
# argument parsing differs between BSD kill (macOS) and procps-ng kill (Linux).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.27.0"
