[package]
name = "apb-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apb-core = { path = "../apb-core" }
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true
# uuid v4 - unpredictable hook_secret for webhook nodes wait (spec 6.7)
uuid = { version = "1.23.4", features = ["v4"] }
# Connector call executor (spec 2026-07-18-connectors, section 6): blocking
# HTTP client (redirects disabled, per-call timeout) and args-schema validation.
ureq.workspace = true
jsonschema.workspace = true
percent-encoding.workspace = true
# Native SMTP execution for the `smtp` connector function kind (spec 4.2):
# blocking low-level SmtpConnection client, STARTTLS via rustls (TLS 1.2+ by
# default), MIME/multipart built by the library.
lettre.workspace = true
# Native IMAP execution for the `imap` connector function kind (spec 3.2, wave
# 2): blocking IMAP client with a hard silent-read guarantee (BODY.PEEK, read
# ops open with EXAMINE), message parsing via mail-parser, TLS via rustls with
# the platform certificate verifier.
imap.workspace = true
imap-proto.workspace = true
mail-parser.workspace = true
rustls.workspace = true
rustls-platform-verifier.workspace = true

# Group termination of agent process tree on cancellation/timeout (Unix):
# kill(-pgid, SIGKILL). libc already in tree transitively, direct dependency
# of new crates not needed.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.27.0"
# Decodes the recorded XOAUTH2 SASL payload in the imap listener tests.
base64 = "0.22"
