[package]
name = "apb-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apb-core = { path = "../apb-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.7", features = ["cors"] }
notify = "8.2"
uuid = { version = "1.23.4", features = ["v4"] }
rust-embed = "8.12"
mime_guess = "2.0.5"
apb-engine = { version = "0.2.0", path = "../apb-engine" }
apb-mcp = { version = "0.2.0", path = "../apb-mcp" }

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.27.0"
tower = "0.5.3"
